--- a/busstops/templates/user_banned.html
+++ b/busstops/templates/user_banned.html
@@ -17,7 +17,7 @@
         <p style="color: var(--text-color);">Your account has been temporarily suspended from editing vehicles and other content on transportthing.uk. This may be due to:</p>
 
         <ul style="margin: 1rem 0; color: var(--text-color);">
-            <li>Repeated violations of our community guidelines</li>
+            <li><strong>Repeated violations</strong> of our <a href="/rules">community guidelines</a></li>
             <li>Submitting inaccurate or spam content</li>
             <li>Automated or suspicious activity</li>
             <li>Other terms of service violations</li>
