--- a/busstops/templates/liveries.html
+++ b/busstops/templates/liveries.html
@@ -171,7 +171,7 @@
           </div>
         </div>
         <div class="flex flex-col items-center space-y-4">
-          <div class="text-sm font-medium mb-2">View in dark mode</d
+          <div class="text-sm font-medium mb-2">View in dark mode</div>
           <div class="preview-box-dark overlay-box bg-black flex items-center justify-center text-white text-center bus-times-size">
             <div class="gradient-overlay" id="busTimesGradientMedium"></div>
             <div class="text-overlay dark-text">66</div>
