--- a/busstops/templates/jinja2/busstops/service_detail.html
+++ b/busstops/templates/jinja2/busstops/service_detail.html
@@ -1,4 +1,4 @@
-{% extends 'jinja2/page.html' %}
+{% extends 'page.html' %}
 
 {% block title %}{{ object }} – {% if operators %}{{ operators.0 }} – {% endif %}TransportThing{% endblock %}
 
