--- a/busstops/templates/favourites/favourite_button.html
+++ b/busstops/templates/favourites/favourite_button.html
@@ -1,5 +1,5 @@
-{% if user.is_authenticated %}
-<button 
+{% if user.is_authenticated and object and content_type_id and object_id %}
+<button
     class="favourite-btn {{ css_class }} {% if is_favourited %}favourited{% endif %}"
     data-content-type="{{ content_type_id }}"
     data-object-id="{{ object_id }}"
