--- a/busstops/templates/favourites/favourites_list.html
+++ b/busstops/templates/favourites/favourites_list.html
@@ -17,44 +17,45 @@
             <div class="favourites-items">
                 {% for favourite in items %}
                     <div class="favourite-item">
-                        {% if content_type == 'service' %}
+                        {% if favourite.content_object %}
                             <a href="{{ favourite.content_object.get_absolute_url }}" class="favourite-link">
                                 <div class="favourite-content">
                                     <div class="favourite-title">
-                                        {{ favourite.content_object.line_name }}
+                                        {{ favourite.display_name|default:favourite.content_object }}
                                     </div>
-                                    <div class="favourite-subtitle">
-                                        {{ favourite.content_object.description|default:"Service" }}
-                                    </div>
-                                    {% if favourite.content_object.operator %}
-                                        <div class="favourite-operator">
-                                            {{ favourite.content_object.operator.noc }}
+                                    {% if favourite.display_subtitle %}
+                                        <div class="favourite-subtitle">
+                                            {{ favourite.display_subtitle }}
                                         </div>
                                     {% endif %}
                                 </div>
                             </a>
-                        {% elif content_type == 'operator' %}
-                            <a href="{{ favourite.content_object.get_absolute_url }}" class="favourite-link">
-                                <div class="favourite-content">
-                                    <div class="favourite-title">
-                                        {{ favourite.content_object.name }}
-                                    </div>
-                                    <div class="favourite-subtitle">
-                                        ({{ favourite.content_object.noc }})
-                                    </div>
-                                </div>
-                            </a>
+                            
+                            {% favourite_button favourite.content_object css_class="small favourite-remove" %}
                         {% else %}
-                            <a href="{{ favourite.content_object.get_absolute_url }}" class="favourite-link">
-                                <div class="favourite-content">
-                                    <div class="favourite-title">
-                                        {{ favourite.content_object }}
-                                    </div>
+                            {# Fallback for orphaned favourites where the object no longer exists #}
+                            <div class="favourite-content">
+                                <div class="favourite-title">
+                                    {{ favourite.display_name|default:"Deleted item" }}
                                 </div>
-                            </a>
+                                {% if favourite.display_subtitle %}
+                                    <div class="favourite-subtitle">
+                                        {{ favourite.display_subtitle }}
+                                    </div>
+                                {% endif %}
+                                <div class="favourite-subtitle" style="color: #999; font-style: italic;">
+                                    (No longer available)
+                                </div>
+                            </div>
+                            
+                            {# Show a remove button for orphaned favourites #}
+                            <form method="post" action="/favourites/remove/{{ favourite.id }}/" style="display: inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="favourite-btn small favourite-remove" title="Remove from favourites">
+                                    <span class="favourite-icon">✕</span>
+                                </button>
+                            </form>
                         {% endif %}
-                        
-                        {% favourite_button favourite.content_object css_class="small favourite-remove" %}
                     </div>
                 {% endfor %}
             </div>
