--- a/busstops/templates/busstops/operator_detail.html
+++ b/busstops/templates/busstops/operator_detail.html
@@ -40,7 +40,7 @@
 
 {% block content %}
 
-<div class="operator-header-wrapper">
+<div class="operator-header-wrapper" style="margin-top: 0.5rem;">
     <h1>{{ object }}</h1>
     {% favourite_button object css_class="large operator-favourite" %}
 </div>
