--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -17,7 +17,7 @@
 {% load static %}
 {% load custom_styles %}
 <!-- <link rel="icon" sizes="48x48" type="image/png" href="/favicon.ico"> -->
-<link rel="icon" sizes="any" type="image/svg+xml" href="https://cdn.transportthing.uk/TT%20Icon.png">
+<link rel="icon" sizes="any" type="image/svg+xml" href="https://cdn.transportthing.uk/TT%20Icon.png?v2">
 <link rel="manifest" href="/static/manifest.webmanifest">
 <link rel="stylesheet" href="/static/dist/css/style.css">
 {% custom_style_css %}
