--- a/busstops/templates/jinja2/page.html
+++ b/busstops/templates/jinja2/page.html
@@ -93,7 +93,7 @@
     </ul>
     	{% include "motd_partial.html" %}
 <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#33a0bb', 'W7W21AYHUU');kofiwidget2.draw();</script>
+<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#628fc9', 'W7W21AYHUU');kofiwidget2.draw();</script>
 <script defer data-domain="transportthing.uk" src="https://metric.snubs.dev/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
