fix: forgot to change ko-fi button colour

--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -117,8 +117,7 @@
 
     	{% include "motd_partial.html" %}
 <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#628fc9', 'W7W21AYHUU');kofiwidget2.draw();</script>
-<!-- ads code to be added soon to replace donation link. don't want to donate because you think its a scummy thing to ALLOW people to donate to a project? cool, have ads instead. -->
+<script type='text/javascript'>kofiwidget2.init('Support us on Ko-fi', '#304560', 'W7W21AYHUU');kofiwidget2.draw();</script>
 <script defer data-domain="transportthing.uk" src="https://metric.snubs.dev/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
