--- a/busstops/templates/page.html
+++ b/busstops/templates/page.html
@@ -53,7 +53,7 @@
     <div>
         <a href="/" class="site-name"></a>
         <ul>
-            <li><a style="color: #ffffff;" href="/map{% if object.latlong %}#16/{{ object.latlong.y|floatformat:4 }}/{{ object.latlong.x|floatformat:4 }}{% endif %}">Map</a></li>
+            <li><a href="/map{% if object.latlong %}#16/{{ object.latlong.y|floatformat:4 }}/{{ object.latlong.x|floatformat:4 }}{% endif %}">Map</a></li>
         </ul>
         <form method="GET" action="/search-query" class="search">
             <label>
