--- a/busstops/templates/index.html
+++ b/busstops/templates/index.html
@@ -23,7 +23,7 @@
             <p><label for="q">Search for places, operators or routes</label></p>
             <p>
                 <input id="q" name="q" type="search" required>
-                <input type="submit" value="Search" style="color: white">
+                <input type="submit" value="Search">
             </p>
         </form>
     </div>
