--- a/busstops/templates/breadcrumb.html
+++ b/busstops/templates/breadcrumb.html
@@ -2,7 +2,17 @@
     <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
         <a itemprop="item" href="/">
             <span itemprop="name">Home</span>
-        </a><meta itemprop="position" content="0"></li>{% for item in breadcrumb %}{% if item %}<li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem"><a itemprop="item" href="{{ item.get_absolute_url }}">
-    <span itemprop="name">{% firstof item.get_line_name_and_brand item %}</span>
-</a><meta itemprop="position" content="{{ forloop.counter }}"></li>{% endif %}{% endfor %}
+        </a>
+        <meta itemprop="position" content="0">
+    </li>
+{% for item in breadcrumb %}
+    {% if item %}
+        <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+            <a itemprop="item" href="{{ item.get_absolute_url }}">
+                <span itemprop="name">{% firstof item.get_line_name_and_brand item %}</span>
+            </a>
+            <meta itemprop="position" content="{{ forloop.counter }}">
+        </li>
+    {% endif %}
+{% endfor %}
 </ol>
